[gd_scene load_steps=10 format=2]

[ext_resource path="res://MultiplayerScene.gd" type="Script" id=1]
[ext_resource path="res://PlayBtnStyle.tres" type="StyleBox" id=2]
[ext_resource path="res://PlayBtnStyleHover.tres" type="StyleBox" id=3]
[ext_resource path="res://PlayBtnStylePressed.tres" type="StyleBox" id=4]
[ext_resource path="res://Font.tres" type="DynamicFont" id=5]
[ext_resource path="res://PlayBtnStyleFocus.tres" type="StyleBox" id=6]
[ext_resource path="res://Button.gd" type="Script" id=7]
[ext_resource path="res://CheckButton.gd" type="Script" id=8]
[ext_resource path="res://StartButton.gd" type="Script" id=9]

[node name="MultiplayerScene" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="IP1" type="SpinBox" parent="Control"]
margin_left = 297.0
margin_top = 274.0
margin_right = 371.0
margin_bottom = 298.0
max_value = 255.0
value = 127.0

[node name="IP2" type="SpinBox" parent="Control"]
margin_left = 382.0
margin_top = 274.0
margin_right = 456.0
margin_bottom = 298.0
max_value = 255.0

[node name="IP3" type="SpinBox" parent="Control"]
margin_left = 467.0
margin_top = 274.0
margin_right = 541.0
margin_bottom = 298.0
max_value = 255.0

[node name="IP4" type="SpinBox" parent="Control"]
margin_left = 548.0
margin_top = 274.0
margin_right = 622.0
margin_bottom = 298.0
max_value = 255.0
value = 1.0

[node name="PORT" type="SpinBox" parent="Control"]
margin_left = 652.0
margin_top = 274.0
margin_right = 726.0
margin_bottom = 298.0
max_value = 99999.0
value = 8192.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 605.0
margin_top = 252.0
margin_right = 629.0
margin_bottom = 296.0
custom_colors/default_color = Color( 0.172549, 0.164706, 0.196078, 1 )
custom_fonts/normal_font = ExtResource( 5 )
text = " :"

[node name="RichTextLabel2" type="RichTextLabel" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 362.0
margin_top = 208.0
margin_right = 578.0
margin_bottom = 243.0
custom_colors/default_color = Color( 0.270588, 0, 0.776471, 1 )
custom_fonts/normal_font = ExtResource( 5 )
text = "Host server :  "

[node name="RichTextLabel4" type="RichTextLabel" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 301.0
margin_top = 155.0
margin_right = 408.0
margin_bottom = 190.0
custom_colors/default_color = Color( 0.270588, 0, 0.776471, 1 )
custom_fonts/normal_font = ExtResource( 5 )
text = "Name :  "

[node name="CheckButton" type="CheckButton" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 548.0
margin_top = 204.0
margin_right = 624.0
margin_bottom = 244.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 38, 18 )
script = ExtResource( 8 )

[node name="Button" type="Button" parent="Control"]
self_modulate = Color( 0.52549, 0.0862745, 0.0862745, 1 )
margin_left = 424.0
margin_top = 320.0
margin_right = 607.0
margin_bottom = 394.0
custom_colors/font_color_focus = Color( 0.862745, 0.192157, 0.192157, 1 )
custom_colors/font_color = Color( 0.823529, 0.054902, 0.054902, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Connect"
script = ExtResource( 7 )

[node name="PlayerName" type="TextEdit" parent="Control"]
margin_left = 420.0
margin_top = 168.0
margin_right = 621.0
margin_bottom = 208.0
hint_tooltip = "Enter Name"
custom_fonts/font = ExtResource( 5 )

[node name="StartButton" type="Button" parent="."]
visible = false
self_modulate = Color( 0.52549, 0.0862745, 0.0862745, 1 )
margin_left = 424.0
margin_top = 320.0
margin_right = 607.0
margin_bottom = 394.0
custom_colors/font_color_focus = Color( 0.862745, 0.192157, 0.192157, 1 )
custom_colors/font_color = Color( 0.823529, 0.054902, 0.054902, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Start"
script = ExtResource( 9 )

[node name="ConnectedClients" type="Label" parent="."]
visible = false
margin_left = 2.0
margin_top = 6.0
margin_right = 1023.0
margin_bottom = 317.0
custom_colors/font_color = Color( 0.0784314, 0, 1, 1 )
custom_fonts/font = ExtResource( 5 )
align = 1
valign = 1

[node name="ClientWaiting" type="Label" parent="."]
visible = false
margin_left = 2.0
margin_top = 268.0
margin_right = 1023.0
margin_bottom = 305.0
custom_colors/font_color = Color( 0.0784314, 0, 1, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Connecting to server..."
align = 1
valign = 1

[node name="NotStarted" type="Label" parent="."]
visible = false
margin_left = 2.0
margin_top = 268.0
margin_right = 1023.0
margin_bottom = 305.0
custom_colors/font_color = Color( 0.0784314, 0, 1, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Waiting on server to start"
align = 1
valign = 1

[node name="ServerDisconnected" type="Label" parent="."]
visible = false
margin_left = 2.0
margin_top = 268.0
margin_right = 1023.0
margin_bottom = 305.0
custom_colors/font_color = Color( 0.0784314, 0, 1, 1 )
custom_fonts/font = ExtResource( 5 )
text = "The server has disconnected!"
align = 1
valign = 1

[connection signal="pressed" from="StartButton" to="StartButton" method="_on_StartButton_pressed"]
